<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_dialog_background"
    tools:context=".ui.fragment.BuyerSelectionDialogFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/addBuyer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_weight="1">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:background="@drawable/borderwithred"
            android:text="Add New Buyer"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/red"

            />

    </LinearLayout>
    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/closewithcircle"/>
</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_dialog_background"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            style="@style/RedDialogTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:gravity="center"
            android:text="@string/buyer_details"

            />

        <TextView
            style="@style/BlackTextStyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="25dp"
            android:text="@string/name" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewBuyer"
            style="@style/BlackEditTextStyleSemiBold"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:singleLine="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_greybackground"
            android:gravity="center_vertical"
            android:hint="@string/enter_buyer_name_amp_choose_a_buyer" />


        <TextView
            style="@style/BlackTextStyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:text="@string/mobile_no" />


        <TextView
            android:id="@+id/buyerMobileNoTextview"
            style="@style/BlackTextStyleSemiBold"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_whitebackground_blackborder"
            android:elevation="5dp"
            android:gravity="center_vertical"
            android:hint="@string/sample_phoneno" />

        <TextView
            style="@style/BlackTextStyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:hint="@string/address" />

        <TextView
            android:id="@+id/buyerAddressTextview"
            style="@style/BlackTextStyleSemiBold"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_whitebackground_blackborder"
            android:elevation="5dp"
            android:gravity="center_vertical"
            android:hint="@string/address" />

        <Button
            android:id="@+id/selectBuyer_button"
            style="@style/WhiteTextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_redbackground"
            android:text="@string/select_buyer" />
    </LinearLayout>




</LinearLayout>